cmake_minimum_required(VERSION 2.8)

set(PROJECT_NAME Viewer3d)
set(PROJECT_VERSION_MAJOR 1)
set(PROJECT_VERSION_MINOR 0)
set(PROJECT_VERSION_PATCH 0)
set(CMAKE_BUILD_TYPE Debug)
project( ${PROJECT_NAME} )

set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/bin)
set (CMAKE_CXX_FLAGS "-Wall -Werror -pedantic -g -std=c++11") 

# Versioning
# Replace @VARIABLES@ with CMake values
configure_file(
  "${CMAKE_CURRENT_SOURCE_DIR}/src/CommandLineParser.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/CommandLineParser.hpp"
  )

# Source
file(GLOB_RECURSE  
	Project_SOURCES
       ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp
    )
add_executable( ${PROJECT_NAME} ${Project_SOURCES} )


########################### Libraries ##########################################

# OpenGL
#find_package(OpenGL REQUIRED)
#include_directories(${OPENGL_INCLUDE_DIR})
#if (OPENGL_FOUND)
#  target_link_libraries(${EXECUTABLE_NAME} ${OPENGL_LIBRARIES})
#  target_link_libraries(${EXECUTABLE_NAME} m)  # if using maths.h
#endif()

# SFML
include_directories("${CMAKE_CURRENT_SOURCE_DIR}/SFML-2.3/include")
target_link_libraries(${PROJECT_NAME} "${CMAKE_CURRENT_SOURCE_DIR}/SFML-2.3/lib/*")

